# SDBench

./: .env.example  .gitignore  README.md  evaluation.py  pyproject.toml
common/: __init__.py  dataset_statistics.py  download_dataset.py  sink_wandb.py
config/benchmark_config/datasets/: timit-debug.yaml
config/pipeline_configs/: AssemblyAIStreamingPipeline.yaml  speakerkit.yaml
icml_analysis/: paper-figures.ipynb
interspeech_analysis/: paper-figures.ipynb
src/openbench/cli/: main.py
src/openbench/cli/commands/: evaluate.py  summary.py
src/openbench/pipeline/: pipeline_aliases.py
src/openbench/pipeline/diarization/: __init__.py
src/openbench/pipeline/diarization/nemo/: sortformer_pipeline.py
src/sdbench/: __init__.py  dataset.py  pipeline_prediction.py
src/sdbench/cli/: __init__.py  command_utils.py  main.py
src/sdbench/cli/commands/: __init__.py  evaluate.py  inference.py  summary.py
src/sdbench/dataset/: __init__.py  dataset_aliases.py  dataset_base.py  dataset_diarization.py  dataset_orchestration.py  dataset_registry.py  dataset_streaming_transcription.py  dataset_transcription.py  dataset_utils.py
src/sdbench/metric/: __init__.py  metric.py  registry.py  speaker_count_metrics.py
src/sdbench/metric/streaming_latency_metrics/: latency_metrics.py  num_corrections.py
src/sdbench/metric/word_error_metrics/: __init__.py  english_abbreviations.py  text_normalizer.py  word_error_metrics.py
src/sdbench/pipeline/: __init__.py  base.py  pipeline_aliases.py  pipeline_registry.py  utils.py
src/sdbench/pipeline/diarization/: __init__.py  aws.py  common.py  picovoice.py  pyannote_api.py  speakerkit.py
src/sdbench/pipeline/diarization/pyannote/: __init__.py  oracle_diarizer.py  oracle_inference.py  pipeline.py
src/sdbench/pipeline/orchestration/: __init__.py  base.py  whisperx.py
src/sdbench/pipeline/streaming_transcription/: __init__.py  assemblyai.py  deepgram.py  fireworks.py  gladia.py  openai.py
src/sdbench/pipeline/transcription/: __init__.py  common.py  whisperkit.py
src/sdbench/runner/: __init__.py  benchmark.py  config.py  data_models.py  utils.py  wandb_logger.py
tests/cli/: __init__.py  test_main.py
tests/metric/word_error_metric/: test_text_normalizer.py
tests/metric/word_error_metric/wder/: test_wder.py  wder_reference.py
tests/pipeline/coreml_pipeline/: test_audio_chunker.py
