[tool.poetry]
name = "sdbench"
version = "0.1.0"
description = "Benchmark suite for speaker diarization"
authors = ["Argmax Inc. <info@takeargmax.com>"]
readme = "README.md"
packages = [{include = "sdbench", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
black = "24.10.0"
pydantic = "2.11.3"
numba = "0.60.0"
llvmlite = "0.43.0"
pyannote-audio = "3.3.2"
datasets = "3.5.0"
argmaxtools = "0.1.19"
hydra-core = "1.3.2"
wandb = "0.19.9"
umap-learn = "0.5.7"
hdbscan = "0.8.40"
plotly = "5.24.1"
kaleido = "0.2.1"
librosa = "0.10.2.post1"
boto3 = "1.37.31"
pvfalcon = "1.0.4"
jiwer = "3.1.0"
whisperx = "3.3.1"
torch = "2.7.0"
scikit-learn = "1.5.1"
speechbrain = "1.0.2"
requests = "2.32.4"
aenum = "3.1.16"
aiofiles = "24.1.0"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.11.16"
aiosignal = "1.3.2"
alembic = "1.15.2"
annotated-types = "0.7.0"
antlr4-python3-runtime = "4.9.3"
anyio = "4.9.0"
appnope = "0.1.4"
asteroid-filterbanks = "0.4.0"
asttokens = "3.0.0"
attrs = "25.3.0"
audioread = "3.0.1"
av = "14.3.0"
beartype = "0.20.2"
beautifulsoup4 = "4.13.3"
bleach = "6.2.0"
botocore = "1.37.31"
cattrs = "24.1.3"
certifi = "2025.1.31"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
click = "8.1.8"
coloredlogs = "15.0.1"
colorlog = "6.9.0"
comm = "0.2.2"
contourpy = "1.3.1"
coremltools = "8.2"
ctranslate2 = "4.4.0"
cycler = "0.12.1"
dataclasses-json = "0.6.7"
debugpy = "1.8.14"
decorator = "5.2.1"
deepgram-sdk = "2.11.0"
deprecation = "2.1.0"
dill = "0.3.8"
docker-pycreds = "0.4.0"
docopt = "0.6.2"
ego4d = "1.7.3"
einops = "0.8.1"
executing = "2.2.0"
faster-whisper = "1.1.0"
filelock = "3.18.0"
flatbuffers = "25.2.10"
fonttools = "4.57.0"
frozenlist = "1.5.0"
fsspec = "2024.12.0"
gdown = "5.2.0"
gitdb = "4.0.12"
gitpython = "3.1.44"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
huggingface-hub = "0.30.2"
humanfriendly = "10.0"
hyperpyyaml = "1.2.2"
idna = "3.10"
iniconfig = "2.1.0"
inquirerpy = "0.3.4"
iopath = "0.1.10"
ipykernel = "6.29.5"
ipython = "9.2.0"
ipython-pygments-lexers = "1.1.1"
jaxtyping = "0.3.1"
jedi = "0.19.2"
jinja2 = "3.1.6"
jmespath = "1.0.1"
joblib = "1.4.2"
julius = "0.2.7"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
kaggle = "1.7.4.2"
kiwisolver = "1.4.8"
lazy-loader = "0.4"
lightning = "2.5.1"
lightning-utilities = "0.14.3"
lxml = "5.3.2"
mako = "1.3.9"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
marshmallow = "3.26.1"
matplotlib = "3.10.1"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
mpmath = "1.3.0"
msgpack = "1.1.0"
multidict = "6.4.0"
multiprocess = "0.70.16"
mypy-extensions = "1.0.0"
nest-asyncio = "1.6.0"
networkx = "3.4.2"
nltk = "3.9.1"
numpy = "2.0.2"
omegaconf = "2.3.0"
onnxruntime = "1.21.0"
optuna = "4.2.1"
packaging = "24.2"
pandas = "2.2.3"
parso = "0.8.4"
pathspec = "0.12.1"
pexpect = "4.9.0"
pfzy = "0.3.4"
pillow = "11.1.0"
platformdirs = "4.3.7"
pluggy = "1.5.0"
pooch = "1.8.2"
portalocker = "3.1.1"
primepy = "1.3"
prompt-toolkit = "3.0.51"
propcache = "0.3.1"
protobuf = "5.29.4"
psutil = "7.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pyaml = "25.1.0"
pyannote-core = "5.0.0"
pyannote-database = "5.1.3"
pyannote-metrics = "3.2.1"
pyannote-pipeline = "3.0.1"
pyarrow = "19.0.1"
pycparser = "2.22"
pydantic-core = "2.33.1"
pydub = "0.25.1"
pygments = "2.19.1"
pynndescent = "0.5.13"
pyparsing = "3.2.3"
pysocks = "1.7.1"
pytest = "8.3.5"
python-dateutil = "2.9.0.post0"
python-slugify = "8.0.4"
pytorch-lightning = "2.5.1"
pytorch-metric-learning = "2.8.1"
pytz = "2025.2"
pyyaml = "6.0.2"
pyzmq = "26.4.0"
rapidfuzz = "3.13.0"
regex = "2024.11.6"
rich = "14.0.0"
ruamel-yaml = "0.18.10"
ruamel-yaml-clib = "0.2.12"
s3transfer = "0.11.4"
safetensors = "0.5.3"
scipy = "1.15.2"
semver = "3.0.4"
sentencepiece = "0.2.0"
sentry-sdk = "2.25.1"
setproctitle = "1.3.5"
shellingham = "1.5.4"
six = "1.17.0"
smmap = "5.0.2"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
soundfile = "0.13.1"
soupsieve = "2.6"
soxr = "0.5.0.post1"
sqlalchemy = "2.0.40"
stack-data = "0.6.3"
sympy = "1.14.0"
tabulate = "0.9.0"
tenacity = "9.1.2"
tensorboardx = "2.6.2.2"
text-unidecode = "1.3"
textgrid = "1.6.1"
threadpoolctl = "3.6.0"
tokenizers = "0.21.1"
torch-audiomentations = "0.12.0"
torch-pitch-shift = "1.2.5"
torchaudio = "2.7.0"
torchmetrics = "1.7.1"
tornado = "6.4.2"
tqdm = "4.67.1"
traitlets = "5.14.3"
transformers = "4.51.1"
typer = "0.15.2"
typing-inspect = "0.9.0"
typing-inspection = "0.4.0"
typing-extensions = "4.13.1"
tzdata = "2025.2"
urllib3 = "2.3.0"
wadler-lindig = "0.1.4"
wcwidth = "0.2.13"
webencodings = "0.5.1"
websocket-client = "1.8.0"
websockets = "10.1"
xxhash = "3.5.0"
yarl = "1.19.0"
dotenv = "0.9.9"

[tool.poetry.group.dataset.dependencies]
gdown = "^5.2.0"
lxml = "^5.3.0"
textgrid = "^1.6.1"
kaggle = "^1.6.17"
pydub = "^0.25.1"
transformers = "^4.48.2"
ego4d = "^1.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
